crates/nyx-lexer/tests/snapshots/integration_tests__structs__empty.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Struct
- Ident: Empty
- Newline
