crates/nyx-lexer/tests/snapshots/integration_tests__structs__generic_single.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Struct
- Ident: Box
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Ident: value
- Colon
- Ident: T
- Newline
- Dedent
- Struct
- Ident: Pair
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Ident: first
- Colon
- Ident: T
- Newline
- Ident: second
- Colon
- Ident: T
- Newline
- Dedent
- Struct
- Ident: Optional
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Ident: has_value
- Colon
- Bool
- Newline
- Ident: value
- Colon
- Ident: T
- Newline
- Dedent
