crates/nyx-lexer/tests/snapshots/integration_tests__structs__multiple_fields.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Struct
- Ident: Point
- Newline
- Indent
- Ident: x
- Colon
- F64
- Newline
- Ident: y
- Colon
- F64
- Newline
- Dedent
- Struct
- Ident: Point3
- Newline
- Indent
- Ident: x
- Colon
- F64
- Newline
- Ident: y
- Colon
- F64
- Newline
- Ident: z
- Colon
- F64
- Newline
- Dedent
- Struct
- Ident: Rgba
- Newline
- Indent
- Ident: r
- Colon
- U8
- Newline
- Ident: g
- Colon
- U8
- Newline
- Ident: b
- Colon
- U8
- Newline
- Ident: a
- Colon
- U8
- Newline
- Dedent
