crates/nyx-lexer/tests/snapshots/integration_tests__structs__packed.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Packed
- Struct
- Ident: Bits8
- Newline
- Indent
- Ident: a
- Colon
- U8
- Newline
- Ident: b
- Colon
- U8
- Newline
- Dedent
- Packed
- Struct
- Ident: Header
- Newline
- Indent
- Ident: magic
- Colon
- U32
- Newline
- Ident: version
- Colon
- U16
- Newline
- Ident: flags
- Colon
- U8
- Newline
- Ident: reserved
- Colon
- U8
- Newline
- Dedent
- Packed
- Struct
- Ident: IPv4
- Newline
- Indent
- Ident: version
- Colon
- U8
- Newline
- Ident: ihl
- Colon
- U8
- Newline
- Ident: tos
- Colon
- U8
- Newline
- Ident: len
- Colon
- U16
- Newline
- Ident: id
- Colon
- U16
- Newline
- Ident: frag
- Colon
- U16
- Newline
- Ident: ttl
- Colon
- U8
- Newline
- Ident: proto
- Colon
- U8
- Newline
- Ident: checksum
- Colon
- U16
- Newline
- Ident: src
- Colon
- U32
- Newline
- Ident: dst
- Colon
- U32
- Newline
- Dedent
