crates/nyx-lexer/tests/snapshots/integration_tests__structs__single_field.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Struct
- Ident: Wrapper
- Newline
- Indent
- Ident: value
- Colon
- I32
- Newline
- Dedent
