crates/nyx-lexer/tests/snapshots/integration_tests__structs__slice_fields.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Struct
- Ident: Buffer
- Newline
- Indent
- Ident: data
- Colon
- LBracket
- U8
- RBracket
- Newline
- Ident: len
- Colon
- USize
- Newline
- Dedent
- Struct
- Ident: Matrix
- Newline
- Indent
- Ident: rows
- Colon
- USize
- Newline
- Ident: cols
- Colon
- USize
- Newline
- Ident: data
- Colon
- LBracket
- F64
- RBracket
- Newline
- Dedent
