crates/nyx-lexer/tests/snapshots/integration_tests__structs__visibility.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Public
- Struct
- Ident: PublicPoint
- Newline
- Indent
- Ident: x
- Colon
- F64
- Newline
- Ident: y
- Colon
- F64
- Newline
- Dedent
- Export
- Struct
- Ident: ExportedRect
- Newline
- Indent
- Ident: x
- Colon
- F64
- Newline
- Ident: y
- Colon
- F64
- Newline
- Ident: w
- Colon
- F64
- Newline
- Ident: h
- Colon
- F64
- Newline
- Dedent
- Private
- Struct
- Ident: PrivateNode
- Newline
- Indent
- Ident: data
- Colon
- I32
- Newline
- Ident: next
- Colon
- Question
- Star
- Ident: PrivateNode
- Newline
- Dedent
