crates/nyx-lexer/tests/snapshots/integration_tests__structs__with_annotations.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Hash
- Ident: repr
- LParen
- Ident: C
- RParen
- Newline
- Struct
- Ident: CStruct
- Newline
- Indent
- Ident: x
- Colon
- I32
- Newline
- Ident: y
- Colon
- I32
- Newline
- Dedent
- Hash
- Ident: align
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "16"
    suffix: ~
- RParen
- Newline
- Struct
- Ident: AlignedBuffer
- Newline
- Indent
- Ident: data
- Colon
- LBracket
- U8
- Semicolon
- IntegerLiteral:
    base: Decimal
    digits: "64"
    suffix: ~
- RBracket
- Newline
- Dedent
- Hash
- Packed
- Newline
- Hash
- Ident: repr
- LParen
- Ident: C
- RParen
- Newline
- Struct
- Ident: PackedCStruct
- Newline
- Indent
- Ident: a
- Colon
- U8
- Newline
- Ident: b
- Colon
- U32
- Newline
- Dedent
